some small alignment fixes

--- a/styles.css
+++ b/styles.css
@@ -344,7 +344,7 @@ html,body
 
 .main__img--container {
     text-align: center;
-    width: 850px;
+    
 }
 
 .main__img--card {
